// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn component: Should render 1`] = `
<SignInRenderer
  error={null}
  focusNext={[Function]}
  handleSubmit={[Function]}
  inProgress={false}
  inputRefs={Object {}}
  loginForm={
    FormGroup {
      "_onDisabledChange": Array [],
      "_pendingChange": false,
      "_pendingDirty": false,
      "_pendingTouched": false,
      "asyncValidator": null,
      "controls": Object {
        "email": FormControl {
          "_onCollectionChange": [Function],
          "_onDisabledChange": Array [],
          "_parent": [Circular],
          "_pendingChange": true,
          "_pendingDirty": false,
          "_pendingTouched": false,
          "_pendingValue": "",
          "active": false,
          "asyncValidator": null,
          "errors": Object {
            "required": true,
          },
          "formState": "",
          "get": [Function],
          "getError": [Function],
          "handler": [Function],
          "hasError": [Function],
          "meta": Object {},
          "onBlur": [Function],
          "onBlurChanges": Observable {
            "observers": Array [],
          },
          "onChange": [Function],
          "onFocus": [Function],
          "onValueChanges": Observable {
            "observers": Array [],
          },
          "patchValue": [Function],
          "pristine": true,
          "reset": [Function],
          "setValue": [Function],
          "stateChanges": Observable {
            "observers": Array [],
          },
          "status": "INVALID",
          "statusChanges": Observable {
            "observers": Array [],
          },
          "submitted": false,
          "touched": false,
          "validator": [Function],
          "validatorsOrOpts": Object {
            "asyncValidators": null,
            "updateOn": null,
            "validators": Array [
              [Function],
              [Function],
            ],
          },
          "value": "",
          "valueChanges": Observable {
            "observers": Array [],
          },
        },
        "password": FormControl {
          "_onCollectionChange": [Function],
          "_onDisabledChange": Array [],
          "_parent": [Circular],
          "_pendingChange": true,
          "_pendingDirty": false,
          "_pendingTouched": false,
          "_pendingValue": "",
          "active": false,
          "asyncValidator": null,
          "errors": Object {
            "required": true,
          },
          "formState": "",
          "get": [Function],
          "getError": [Function],
          "handler": [Function],
          "hasError": [Function],
          "meta": Object {},
          "onBlur": [Function],
          "onBlurChanges": Observable {
            "observers": Array [],
          },
          "onChange": [Function],
          "onFocus": [Function],
          "onValueChanges": Observable {
            "observers": Array [],
          },
          "patchValue": [Function],
          "pristine": true,
          "reset": [Function],
          "setValue": [Function],
          "stateChanges": Observable {
            "observers": Array [],
          },
          "status": "INVALID",
          "statusChanges": Observable {
            "observers": Array [],
          },
          "submitted": false,
          "touched": false,
          "validator": [Function],
          "validatorsOrOpts": Object {
            "asyncValidators": null,
            "updateOn": null,
            "validators": [Function],
          },
          "value": "",
          "valueChanges": Observable {
            "observers": Array [],
          },
        },
      },
      "errors": null,
      "get": [Function],
      "getError": [Function],
      "handleSubmit": [Function],
      "hasError": [Function],
      "meta": Object {},
      "patchValue": [Function],
      "pristine": true,
      "reset": [Function],
      "setValue": [Function],
      "stateChanges": Observable {
        "observers": Array [],
      },
      "status": "INVALID",
      "statusChanges": Observable {
        "observers": Array [],
      },
      "submitted": false,
      "touched": false,
      "validator": null,
      "validatorOrOpts": Object {
        "asyncValidators": null,
        "updateOn": null,
        "validators": null,
      },
      "value": Object {
        "email": "",
        "password": "",
      },
      "valueChanges": Observable {
        "observers": Array [],
      },
    }
  }
/>
`;

exports[`SignIn component: SignInRenderer renders when no error message 1`] = `
<AuthBase
  error=""
  extraLinks={
    Array [
      <AuthExtraLink
        buttonText="Sign Up"
        handlePress={[Function]}
        message="No account yet?"
      />,
      <AuthExtraLink
        buttonText="Reset"
        handlePress={[Function]}
        message="Forgot your password?"
      />,
    ]
  }
  title="Sign In"
>
  <FieldGroup
    render={[Function]}
    strict={false}
  />
</AuthBase>
`;

exports[`SignIn component: SignInRenderer renders with error message 1`] = `
<AuthBase
  error="Some error occurred"
  extraLinks={
    Array [
      <AuthExtraLink
        buttonText="Sign Up"
        handlePress={[Function]}
        message="No account yet?"
      />,
      <AuthExtraLink
        buttonText="Reset"
        handlePress={[Function]}
        message="Forgot your password?"
      />,
    ]
  }
  title="Sign In"
>
  <FieldGroup
    render={[Function]}
    strict={false}
  />
</AuthBase>
`;
